<resources>
    <string name="app_name">Gia sư TLU</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">1112180316752604</string>
    <string name="fb_login_protocol_scheme">fb1112180316752604</string>
    <string name="facebook_client_token">4470cdbf7a3b390412f4ecb8f5060427</string>


    <string name="noi_dung_tailieu">Nội dung tài liệu</string>
    <string name="ten_tailieu">Tên tài liệu: </string>
    <string name="xem_tailieu">Xem tài liệu</string>

    <string name="defaul_web_client_id">889375058104-tab09toiukujj7tnjr860ht4tlql3a2v.apps.googleusercontent.com</string>

    <string name="prevMonth"><![CDATA[<-]]></string>
    <string name="nextMonth"><![CDATA[->]]></string>

    <string name="gia_su_name_txt">Gia su 1</string>
    <string name="ten_mon_hoc">Tên môn học</string>
    <string name="noidung_monhoc">Nội dung môn học</string>

    <string name="themsukien">Thêm sự kiện</string>
    <string name="t2">T2</string>
    <string name="_06_2024">06/2024</string>
    <string name="s_ki_n">Sự kiện</string>
    <string name="hour">10:00</string>
    <string name="s_ki_n_1">Sự kiện 1</string>
    <string name="s_ki_n_2">Sự kiện 2</string>
    <string name="s_ki_n_3">Sự kiện 3</string>
    <string name="search">Tìm kiếm...</string>
    <string name="tennguoidng">Tên người dùng</string>
    <string name="gia_s">Gia sư</string>
    <string name="di_n_n">Diễn đàn</string>
    <string name="tin_nh_n">Tin nhắn</string>
    <string name="m_n_h_c">Môn học</string>
    <string name="h_tr">Hỗ trợ</string>
    <string name="gia_s_tlu">Gia sư TLU</string>
    <string name="t_i_li_u">Tài liệu</string>
    <string name="ng_k_tr_th_nh_gia_s">Đăng ký trở thành gia sư</string>
    <string name="th_ng_tin_t_i_kho_n">Thông tin tài khoản</string>
    <string name="t_n_ng_i_d_ng">Tên người dùng</string>
    <string name="th_ng_tin_ng_d_ng">Thông tin ứng dụng</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="b_n_c_mu_n_ng_xu_t">Bạn có muốn đăng xuất?</string>
    <string name="h_y">Hủy</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="g_i">Gửi</string>
    <string name="hu">Huỷ</string>

</resources>